--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,27 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/PokemonListFragment">
+    app:startDestination="@id/FirstFragment">
 
     <fragment
-        android:id="@+id/PokemonListFragment"
-        android:name="com.example.esiea3a.presentation.list.PokemonListFragment"
+        android:id="@+id/FirstFragment"
+        android:name="com.example.myapplication.FirstFragment"
         android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_pokemon_list">
+        tools:layout="@layout/fragment_first">
 
         <action
-            android:id="@+id/navigateToPokemonDetailFragment"
-            app:destination="@id/PokemonDetailFragment" />
+            android:id="@+id/action_FirstFragment_to_SecondFragment"
+            app:destination="@id/SecondFragment" />
     </fragment>
-
     <fragment
-        android:id="@+id/PokemonDetailFragment"
-        android:name="com.example.esiea3a.presentation.detail.PokemonDetailFragment"
+        android:id="@+id/SecondFragment"
+        android:name="com.example.myapplication.SecondFragment"
         android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_pokemon_detail">
+        tools:layout="@layout/fragment_second">
 
         <action
-            android:id="@+id/navigateToPokemonListFragment"
-            app:destination="@id/PokemonListFragment" />
+            android:id="@+id/action_SecondFragment_to_FirstFragment"
+            app:destination="@id/FirstFragment" />
     </fragment>
 </navigation>
