--- a/app/src/main/res/layout/pokemon_item.xml
+++ b/app/src/main/res/layout/pokemon_item.xml
@@ -9,6 +9,7 @@
     
     <ImageView
         android:id="@+id/pokemon_img"
+        android:contentDescription="@string/app_name"
         android:layout_width="50dp"
         android:layout_height="50dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +23,9 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         tools:text="Pikachu"
-        android:layout_marginStart="10dp"
+        android:gravity="center"
+
+
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@+id/pokemon_img"
         app:layout_constraintEnd_toEndOf="parent"
